--- a/Discovery/UsbControl/UsbControl.rc
+++ b/Discovery/UsbControl/UsbControl.rc
@@ -84,99 +84,52 @@ BEGIN
     DEFPUSHBUTTON   "È·¶¨",IDOK,113,41,50,14,WS_GROUP
 END
 
-IDD_USBCONTROL_DIALOG DIALOGEX 0, 0, 490, 359
+IDD_USBCONTROL_DIALOG DIALOGEX 0, 0, 288, 298
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_POPUP | WS_VISIBLE | WS_CLIPSIBLINGS | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 EXSTYLE WS_EX_APPWINDOW
 CAPTION " "
 FONT 9, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    PUSHBUTTON      "Search",IDC_BTN_SEARCH,23,9,33,30
-    PUSHBUTTON      "Connect",IDC_BTN_CONNECT,57,9,33,30
-    PUSHBUTTON      "VideoCap",IDC_BTN_VIDEOCAPTURE,91,9,33,30
-    PUSHBUTTON      "StopCap",IDC_BTN_STOPCAPTURE,125,9,33,30
-    PUSHBUTTON      "CloseCon",IDC_BTN_CLOSECON,158,9,33,30
-    PUSHBUTTON      "SnapShot",IDC_BTN_SNAP,191,9,33,30
-    LISTBOX         IDC_LIST1,17,46,206,77,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "",IDC_IPADDRESS_CAM,"SysIPAddress32",WS_TABSTOP,170,176,100,15
-    CONTROL         "",IDC_IPADDRESS_SUBNET,"SysIPAddress32",WS_TABSTOP,170,195,99,15
-    CONTROL         "",IDC_IPADDRESS_GATE,"SysIPAddress32",WS_TABSTOP,170,213,99,15
-    PUSHBUTTON      "SetIP",IDC_BUTTON_SETIP,191,139,50,14
-    COMBOBOX        IDC_COMBO_TRIG,50,254,45,33,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    EDITTEXT        IDC_EDIT_TrigFreq,102,254,40,14,ES_AUTOHSCROLL
-    PUSHBUTTON      "set",IDC_BUTTON_SENDgain2,154,254,17,14
-    PUSHBUTTON      "softTrig",IDC_BTN_TRIG,175,254,29,14
-    CONTROL         "AutoGain",IDC_CHECK_Gain,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,50,273,45,10
-    EDITTEXT        IDC_EDIT_GAIN,102,273,40,14,ES_AUTOHSCROLL
-    PUSHBUTTON      "set",IDC_BUTTON_SENDgain,154,273,50,14
-    CONTROL         "AutoExpo",IDC_CHECK_EXPO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,50,290,47,10
-    EDITTEXT        IDC_EDIT_EXPO,102,290,40,14,ES_AUTOHSCROLL
-    PUSHBUTTON      "set",IDC_BUTTON_SENDexpo,154,290,50,14
-    COMBOBOX        IDC_COMBO_CHANNEL,234,22,48,30,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "SaveFile",IDC_CHECK_SAVE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,292,22,42,10
-    CONTROL         "Normal",IDC_RADIO_NORMAL,"Button",BS_AUTORADIOBUTTON | WS_GROUP,294,147,37,10
-    CONTROL         "Xmirror",IDC_RADIO_XMIRROR,"Button",BS_AUTORADIOBUTTON,330,147,38,10
-    CONTROL         "Ymirror",IDC_RADIO_YMIRROR,"Button",BS_AUTORADIOBUTTON,294,165,38,10
-    CONTROL         "XYmirror",IDC_RADIO_XYMIRROR,"Button",BS_AUTORADIOBUTTON,330,165,42,10
-    EDITTEXT        IDC_EDIT_rgain,312,208,40,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_ggain,375,208,40,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_bgain,312,224,40,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_ggain2,375,225,40,14,ES_AUTOHSCROLL
-    PUSHBUTTON      "Set",IDC_BTN_roiset,416,301,33,14
-    EDITTEXT        IDC_EDIT_regaddr,389,153,40,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_regdata,443,151,40,14,ES_AUTOHSCROLL
-    PUSHBUTTON      "R",IDC_BTNregread,395,172,25,14
-    PUSHBUTTON      "W",IDC_BTNregwrite,451,173,25,14
-    PUSHBUTTON      "eeW",IDC_BTNW,447,124,25,14
-    LTEXT           "Data",IDC_STATIC,454,141,21,8
-    LTEXT           "",IDC_STATIC_TEXT,249,60,158,53
-    GROUPBOX        "Status",IDC_STATIC,244,44,171,74
-    GROUPBOX        "ProcType",IDC_STATIC,287,134,87,50
-    GROUPBOX        "WBCtrl",IDC_STATIC,284,192,156,56
-    LTEXT           "SelectChannel",IDC_STATIC,233,10,46,8
-    LTEXT           "CamIP",IDC_STATIC,13,182,23,8
-    LTEXT           "SubNet",IDC_STATIC,13,201,31,8,0,WS_EX_TRANSPARENT
-    LTEXT           "G1",IDC_STATIC_PACK,364,208,12,8
-    LTEXT           "R",IDC_STATIC,300,208,12,8
-    LTEXT           "Trig mode",IDC_STATIC_TRIG,15,254,36,8
-    LTEXT           "Expo",IDC_STATIC,15,290,19,8
-    LTEXT           "Gain",IDC_STATIC,15,273,14,8
-    LTEXT           "B",IDC_STATIC,300,224,12,8
-    LTEXT           "Gateway",IDC_STATIC,13,218,31,8
-    GROUPBOX        "EthCtrl",IDC_STATIC,3,131,273,105
-    GROUPBOX        "ImgCtrl",IDC_static_imgctrl,3,242,219,87
-    LTEXT           "G2",IDC_STATIC_PACK2,364,226,12,8
-    LTEXT           "Addr",IDC_STATIC,403,141,21,8
-    EDITTEXT        IDC_EDIT_camsize,102,306,40,14,ES_AUTOHSCROLL
-    PUSHBUTTON      "set",IDC_BUTTON_SENDcamsize,154,306,50,14
-    LTEXT           "Camera Num",IDC_STATIC,7,307,62,8
-    EDITTEXT        IDC_EDIT_roixstart,304,269,40,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_roixend,356,269,40,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_roiystart,305,301,40,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_roiyend,357,301,40,14,ES_AUTOHSCROLL
-    CONTROL         "Enable",IDC_CHECK_roienable,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,416,270,35,10
-    CONTROL         "binning",IDC_CHECK_binning,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,238,255,38,10
-    CONTROL         "skip",IDC_CHECK_skip,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,238,270,28,10
-    PUSHBUTTON      "Set",IDC_BTN_WBSet2,422,222,17,14
-    LTEXT           "x",IDC_STATIC,292,272,12,8
-    LTEXT           "y",IDC_STATIC,294,307,12,8
-    LTEXT           "start",IDC_STATIC,316,258,21,8
-    LTEXT           "end",IDC_STATIC,372,258,12,8
-    GROUPBOX        "ROI",IDC_STATIC,287,253,164,67
-    CONTROL         "",IDC_IPADDRESS_PCIP,"SysIPAddress32",WS_DISABLED | WS_TABSTOP,170,155,100,15
-    LTEXT           "PC IP",IDC_STATIC,13,162,23,8
-    PUSHBUTTON      "ForceIP",IDC_BUTTON_ForceIp,89,139,50,14
-    CONTROL         "",IDC_IPADDRESS_CAM3,"SysIPAddress32",WS_TABSTOP,55,177,100,15
-    CONTROL         "",IDC_IPADDRESS_SUBNET2,"SysIPAddress32",WS_TABSTOP,55,196,99,15
-    CONTROL         "",IDC_IPADDRESS_GATE2,"SysIPAddress32",WS_TABSTOP,55,214,99,15
-    CONTROL         "",IDC_IPADDRESS_PCIP2,"SysIPAddress32",WS_DISABLED | WS_TABSTOP,55,156,100,15
-    PUSHBUTTON      "test",btn_test,330,21,21,14,NOT WS_VISIBLE
-    PUSHBUTTON      "HardTrigReset",IDC_BTN_TRIG2,329,5,47,14,NOT WS_VISIBLE
-    PUSHBUTTON      "ChangeResol",btn_resolu,361,23,50,14,NOT WS_VISIBLE
-    PUSHBUTTON      "sendPic",btn_sendPic,429,11,48,14
-    PUSHBUTTON      "screenTest",btn_screentest,429,27,48,14
-    PUSHBUTTON      "connectIP",btn_connectIP,430,62,48,14
-    PUSHBUTTON      "screenStop",btn_screentest3,430,45,48,14
-    PUSHBUTTON      "connServer",btn_connectIP2,430,78,48,14
+    PUSHBUTTON      "Search",IDC_BTN_SEARCH,13,8,33,30
+    PUSHBUTTON      "Connect",IDC_BTN_CONNECT,46,8,33,30
+    PUSHBUTTON      "Screen Cap",IDC_BTN_VIDEOCAPTURE,79,8,33,30,BS_MULTILINE
+    PUSHBUTTON      "StopCap",IDC_BTN_STOPCAPTURE,147,7,33,30
+    PUSHBUTTON      "CloseCon",IDC_BTN_CLOSECON,181,6,33,30
+    LISTBOX         IDC_LIST1,17,46,121,50,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "",IDC_IPADDRESS_CAM,"SysIPAddress32",WS_TABSTOP,174,144,100,15
+    CONTROL         "",IDC_IPADDRESS_SUBNET,"SysIPAddress32",WS_TABSTOP,174,163,99,15
+    CONTROL         "",IDC_IPADDRESS_GATE,"SysIPAddress32",WS_TABSTOP,174,181,99,15
+    PUSHBUTTON      "SetIP",IDC_BUTTON_SETIP,194,107,50,14
+    CONTROL         "SaveFile",IDC_CHECK_SAVE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,248,38,33,10
+    EDITTEXT        IDC_EDIT_regaddr,10,220,40,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_regdata,66,220,40,14,ES_AUTOHSCROLL
+    PUSHBUTTON      "R",IDC_BTNregread,10,242,25,14
+    PUSHBUTTON      "W",IDC_BTNregwrite,66,242,25,14
+    PUSHBUTTON      "EEWrite",IDC_BTNW,9,260,49,14
+    LTEXT           "Data",IDC_STATIC,66,210,21,8
+    LTEXT           "",IDC_STATIC_TEXT,147,55,111,29
+    GROUPBOX        "Status",IDC_STATIC,142,44,123,53
+    LTEXT           "CamIP",IDC_STATIC,17,150,23,8
+    LTEXT           "SubNet",IDC_STATIC,17,169,31,8,0,WS_EX_TRANSPARENT
+    LTEXT           "Gateway",IDC_STATIC,17,186,31,8
+    GROUPBOX        "EthCtrl",IDC_STATIC,6,99,273,105
+    LTEXT           "Addr",IDC_STATIC,10,210,21,8
+    CONTROL         "",IDC_IPADDRESS_PCIP,"SysIPAddress32",WS_DISABLED | WS_TABSTOP,174,123,100,15
+    LTEXT           "PC IP",IDC_STATIC,17,130,23,8
+    PUSHBUTTON      "ForceIP",IDC_BUTTON_ForceIp,93,107,50,14
+    CONTROL         "",IDC_IPADDRESS_CAM3,"SysIPAddress32",WS_TABSTOP,58,145,100,15
+    CONTROL         "",IDC_IPADDRESS_SUBNET2,"SysIPAddress32",WS_TABSTOP,58,164,99,15
+    CONTROL         "",IDC_IPADDRESS_GATE2,"SysIPAddress32",WS_TABSTOP,58,182,99,15
+    CONTROL         "",IDC_IPADDRESS_PCIP2,"SysIPAddress32",WS_DISABLED | WS_TABSTOP,58,124,100,15
+    PUSHBUTTON      "SendPic",btn_sendPic,103,238,33,22,BS_MULTILINE | NOT WS_VISIBLE
+    PUSHBUTTON      "Screen Test Cmd",btn_screentest,113,7,33,30,BS_MULTILINE
+    PUSHBUTTON      "Screen Stop",btn_screentest3,142,234,33,25,BS_MULTILINE | NOT WS_VISIBLE
+    PUSHBUTTON      "connServer",btn_connectIP2,123,212,48,14,NOT WS_VISIBLE
+    PUSHBUTTON      "disconnServer",btn_connectIP3,175,212,48,14,NOT WS_VISIBLE
+    PUSHBUTTON      "ConnDev",btn_connectIP4,225,211,48,14,NOT WS_VISIBLE
+    LTEXT           "TcpServer:127.0.0.1:6340",IDC_STATIC,197,249,84,8
+    LTEXT           "ScreenTestCmd: 55 01 01 00 00 00 01",IDC_STATIC,156,260,125,8
+    LTEXT           "CamTestCmd: 55 02 01 00 00 00 01",IDC_STATIC,165,271,116,8
 END
 
 IDD_DLG_VIDEO DIALOGEX 0, 0, 349, 218
@@ -243,8 +196,8 @@ BEGIN
 
     IDD_USBCONTROL_DIALOG, DIALOG
     BEGIN
-        RIGHTMARGIN, 487
-        BOTTOMMARGIN, 350
+        RIGHTMARGIN, 281
+        BOTTOMMARGIN, 281
     END
 
     IDD_DLG_VIDEO, DIALOG
