--- a/Discovery/UsbControl/UsbControl.rc
+++ b/Discovery/UsbControl/UsbControl.rc
@@ -84,31 +84,31 @@ BEGIN
     DEFPUSHBUTTON   "È·¶¨",IDOK,113,41,50,14,WS_GROUP
 END
 
-IDD_USBCONTROL_DIALOG DIALOGEX 0, 0, 288, 298
+IDD_USBCONTROL_DIALOG DIALOGEX 0, 0, 290, 301
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_POPUP | WS_VISIBLE | WS_CLIPSIBLINGS | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 EXSTYLE WS_EX_APPWINDOW
 CAPTION " "
 FONT 9, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    PUSHBUTTON      "Search",IDC_BTN_SEARCH,13,8,33,30
-    PUSHBUTTON      "Connect",IDC_BTN_CONNECT,46,8,33,30
-    PUSHBUTTON      "Screen Cap",IDC_BTN_VIDEOCAPTURE,79,8,33,30,BS_MULTILINE
-    PUSHBUTTON      "StopCap",IDC_BTN_STOPCAPTURE,147,7,33,30
-    PUSHBUTTON      "CloseCon",IDC_BTN_CLOSECON,181,6,33,30
+    PUSHBUTTON      "Search",IDC_BTN_SEARCH,13,6,33,30
+    PUSHBUTTON      "Connect",IDC_BTN_CONNECT,49,6,33,30
+    PUSHBUTTON      "Screen Cap",IDC_BTN_VIDEOCAPTURE,85,6,33,30,BS_MULTILINE
+    PUSHBUTTON      "StopCap",IDC_BTN_STOPCAPTURE,193,7,33,30
+    PUSHBUTTON      "CloseCon",IDC_BTN_CLOSECON,229,7,33,30
     LISTBOX         IDC_LIST1,17,46,121,50,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     CONTROL         "",IDC_IPADDRESS_CAM,"SysIPAddress32",WS_TABSTOP,174,144,100,15
     CONTROL         "",IDC_IPADDRESS_SUBNET,"SysIPAddress32",WS_TABSTOP,174,163,99,15
     CONTROL         "",IDC_IPADDRESS_GATE,"SysIPAddress32",WS_TABSTOP,174,181,99,15
     PUSHBUTTON      "SetIP",IDC_BUTTON_SETIP,194,107,50,14
-    CONTROL         "SaveFile",IDC_CHECK_SAVE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,248,38,33,10
+    CONTROL         "SaveFile",IDC_CHECK_SAVE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,240,35,43,10
     EDITTEXT        IDC_EDIT_regaddr,10,220,40,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_regdata,66,220,40,14,ES_AUTOHSCROLL
     PUSHBUTTON      "R",IDC_BTNregread,10,242,25,14
     PUSHBUTTON      "W",IDC_BTNregwrite,66,242,25,14
     PUSHBUTTON      "EEWrite",IDC_BTNW,9,260,49,14
     LTEXT           "Data",IDC_STATIC,66,210,21,8
-    LTEXT           "",IDC_STATIC_TEXT,147,55,111,29
-    GROUPBOX        "Status",IDC_STATIC,142,44,123,53
+    LTEXT           "",IDC_STATIC_TEXT,149,55,134,36
+    GROUPBOX        "Status",IDC_STATIC,144,44,139,53
     LTEXT           "CamIP",IDC_STATIC,17,150,23,8
     LTEXT           "SubNet",IDC_STATIC,17,169,31,8,0,WS_EX_TRANSPARENT
     LTEXT           "Gateway",IDC_STATIC,17,186,31,8
@@ -121,15 +121,19 @@ BEGIN
     CONTROL         "",IDC_IPADDRESS_SUBNET2,"SysIPAddress32",WS_TABSTOP,58,164,99,15
     CONTROL         "",IDC_IPADDRESS_GATE2,"SysIPAddress32",WS_TABSTOP,58,182,99,15
     CONTROL         "",IDC_IPADDRESS_PCIP2,"SysIPAddress32",WS_DISABLED | WS_TABSTOP,58,124,100,15
-    PUSHBUTTON      "SendPic",btn_sendPic,103,238,33,22,BS_MULTILINE | NOT WS_VISIBLE
-    PUSHBUTTON      "Screen Test Cmd",btn_screentest,113,7,33,30,BS_MULTILINE
-    PUSHBUTTON      "Screen Stop",btn_screentest3,142,234,33,25,BS_MULTILINE | NOT WS_VISIBLE
+    PUSHBUTTON      "condll",btn_cnndll,122,228,33,15,BS_MULTILINE
+    PUSHBUTTON      "Screen Test Cmd",btn_screentest,121,6,33,30,BS_MULTILINE
+    PUSHBUTTON      "Screen Stop",btn_screentest3,157,8,33,30,BS_MULTILINE
     PUSHBUTTON      "connServer",btn_connectIP2,123,212,48,14,NOT WS_VISIBLE
     PUSHBUTTON      "disconnServer",btn_connectIP3,175,212,48,14,NOT WS_VISIBLE
     PUSHBUTTON      "ConnDev",btn_connectIP4,225,211,48,14,NOT WS_VISIBLE
-    LTEXT           "TcpServer:127.0.0.1:6340",IDC_STATIC,197,249,84,8
-    LTEXT           "ScreenTestCmd: 55 01 01 00 00 00 01",IDC_STATIC,156,260,125,8
-    LTEXT           "CamTestCmd: 55 02 01 00 00 00 01",IDC_STATIC,165,271,116,8
+    LTEXT           "TcpServer:127.0.0.1:6340",IDC_STATIC,194,248,89,8
+    LTEXT           "ScreenTestCmd: 55 01 01 00 00 00 01",IDC_STATIC,150,260,133,8
+    LTEXT           "CamTestCmd: 55 02 01 00 00 00 01",IDC_STATIC,157,272,126,8
+    PUSHBUTTON      "SendPic",btn_sendPic2,105,251,33,24,BS_MULTILINE | NOT WS_VISIBLE
+    PUSHBUTTON      "cmddll",btn_cmddll,155,228,33,15,BS_MULTILINE
+    PUSHBUTTON      "grabdll",btn_cmddll2,190,228,33,15,BS_MULTILINE
+    PUSHBUTTON      "touchdll",btn_touchdll,227,227,33,15,BS_MULTILINE
 END
 
 IDD_DLG_VIDEO DIALOGEX 0, 0, 349, 218
@@ -196,8 +200,8 @@ BEGIN
 
     IDD_USBCONTROL_DIALOG, DIALOG
     BEGIN
-        RIGHTMARGIN, 281
-        BOTTOMMARGIN, 281
+        RIGHTMARGIN, 283
+        BOTTOMMARGIN, 294
     END
 
     IDD_DLG_VIDEO, DIALOG
